--- a/categori.html
+++ b/categori.html
@@ -25,11 +25,11 @@
             <div class="logo"><img src="img/668504ac3e46ecbc814f1e9f62ddca47.png" alt="" width="190px" height="120px">
             </div>
             <div class="menu">
-                <a href="home.html">Accueil</a>
-                <a class="choose" href="categori.html">Menu</a>
-                <a href="">À propos</a>
-                <a href="">Nouvelles</a>
-                <a href="">Contact</a>
+                <a class="choose" href="home.html">Accueil</a>
+                <a href="categori.html">Menu</a>
+                <a href="about.html">À propos</a>
+                <a href="new.html">Nouvelles</a>
+                <a href="contact.html">Contact</a>
                 <button class="search" type=""><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
         </div>
