--- a/detail.html
+++ b/detail.html
@@ -26,7 +26,7 @@
             <div class="logo"><img src="img/668504ac3e46ecbc814f1e9f62ddca47.png" alt="" width="190px" height="120px">
             </div>
             <div class="menu">
-                <a class="choose" href="home.html">Accueil</a>
+                 <a class="choose" href="index.html">Accueil</a>
                 <a href="categori.html">Menu</a>
                 <a href="about.html">À propos</a>
                 <a href="new.html">Nouvelles</a>
